--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icmake (7.12.2-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 17 Jul 2009 13:23:37 +0200
+
 icmake (7.12.1-1) unstable; urgency=low
 
   * New upstream release
