--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 icmake (7.12.2-1) unstable; urgency=low
 
+  [ Frank B. Brokken ]
   * New upstream release
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 17 Jul 2009 13:23:37 +0200
+  [ tony mancill ]
+  * debian/control:  
+    - Modify short description of icmake-doc
+
+ -- tony mancill <tmancill@debian.org>  Fri, 17 Jul 2009 11:04:49 -0700
 
 icmake (7.12.1-1) unstable; urgency=low
 
