--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+icmake (7.12.3-1) unstable; urgency=low
+
+  * New upstream release
+    (Closes: #537574)
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 29 Jul 2009 13:23:58 +0200
+
 icmake (7.12.2-1) unstable; urgency=low
 
   [ Frank B. Brokken ]
