Minor maintenance issues. See the changelog
git-svn-id: https://icmake.svn.sourceforge.net/svnroot/icmake/icmake/trunk@1021 dcc949cb-2a1c-0410-b67a-e7e5ca830264

--- a/icmake/changelog
+++ b/icmake/changelog
@@ -1,3 +1,13 @@
+icmake (7.12.4)
+
+  * repaired lacking directory recognition in scripts/icmstart.im
+  * removed `return 0;' from usr/share/icmake/main.cc as 0 is returned by
+    default 
+  * replaced endl by `\n' in usr/share/icmake/usage.cc
+  * changed the location of the main repository in make/about.c
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 22 Dec 2009 14:53:53 +0100
+
 icmake (7.12.3)
 
   * applied the patch given in Debian bug report #537574
